--- a/dia-16/style.css
+++ b/dia-16/style.css
@@ -1,6 +1,5 @@
-*,
-*::before {
-  transition: all 0.7s;
+* {
+  transition: 1s;
 }
 
 body {
@@ -11,49 +10,39 @@ body {
 }
 
 div {
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 2rem 2.5rem;
+  padding: 1rem 3rem;
   border-radius: 0.8rem;
-  overflow: hidden;
-  background: rgba(156, 210, 224, 0.2);
+  background: rgba(142, 232, 255, 0.2) url(back.jpg);
+  background-size: cover;
+  background-blend-mode: overlay;
 }
 
-div::before {
-  content: "";
-  position: absolute;
-  width: 500px;
-  height: 500px;
-  bottom: 40%;
-  left: 10%;
-  background-image: url(back.jpeg);
-  border-radius: 50%;
-  z-index: -1;
-}
-
-div:hover::before {
-  bottom: 0;
-  left: -5%;
-  border-radius: 0;
-}
-
-div:hover img {
-  transform: translateY(30px) rotateZ(2deg);
-}
-
-div:hover strong {
-  transform: translateY(200%);
+div:hover {
+  background: rgba(255, 255, 255, 0.15) url(back.jpg);
+  background-size: cover;
 }
 
 img {
-  height: 13rem;
-  width: 13rem;
+  transform: translateX(-5em) rotateZ(-5deg);
+  height: 9rem;
+  width: 9rem;
+}
+
+div:hover img {
+  transform: translate(0, 10%) rotateZ(0);
 }
 
 strong {
+  transform: translateY(0.25rem);
   font-family: Righteous, cursive;
-  font-size: 5rem;
+  font-size: 4rem;
+}
+
+div:hover strong {
+  filter: blur(5px);
+  opacity: 0;
 }
