--- a/dia-4/style.css
+++ b/dia-4/style.css
@@ -10,6 +10,7 @@ button {
   height: 5rem;
   background: rgb(0, 3, 19);
   border: 4px rgb(18, 31, 97) solid;
+  border-radius: 0.5rem;
   color: rgb(77, 65, 236);
   font-size: 1.5rem;
   font-weight: 700;
